--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -252,3 +252,64 @@
 .bottom-spacing {
     margin-bottom: 80px;
   }
+
+
+  /* manage spots*/
+  .manage-spots-container .spots-container {
+    display:flexbox;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 100px;
+    padding: 20px
+  }
+
+  .manage-spots-container h1 {
+    text-align: center;
+    color: #FF385C;
+    margin-bottom: 30px;
+  }
+
+  .manage-spots-container .spot-card-wrapper {
+    width: 20%;
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 5px #ccc;
+    border-radius: 10px;
+  }
+
+  .manage-spots-container .spot-card {
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: white;
+    height: 100%;
+    cursor: pointer;
+  }
+  .manage-spots-container .spot-image-container {
+    height: 200px;
+    width: 100%;
+    overflow: hidden;
+  }
+  .manage-spots-container .spot-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .manage-spots-container .spot-info {
+    padding: 15px;
+  }
+  .manage-spots-container .spot-rating {
+    font-weight: bold;
+  }
+  .manage-spots-container .spot-price {
+    margin-bottom: 30px;
+  }
+  .manage-spots-container .spot-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+  
+  .manage-spots-container .no-spots {
+    text-align: center;
+  }
+
+
