--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     margin: 0 auto;
     padding: 20px;
-    max-width: 1200px;
+    max-width: 1000px;
   }
 
   .spot-card-link {
@@ -30,7 +30,7 @@
   }
 
   .spot-image-container {
-    height: 200px;
+    height: 220px;
   }
 
 
@@ -77,6 +77,8 @@
 
 .spot-header {
     margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 24px;
   }
 
  .spot-images {
@@ -239,15 +241,6 @@
     font-size: 16px;
   }
 
-.reviews-section {
-    margin-top: 20px;
-}
-
-.review-item {
-    border-bottom: 1px solid #ddd;
-    padding: 10px 0;
-    margin-bottom: 10px;
-}
 
 .bottom-spacing {
     margin-bottom: 80px;
@@ -313,3 +306,82 @@
   }
 
 
+  /* reviews*/
+  .reviews-section {
+    margin-top: 2px;
+    padding-top: 15px;
+    border-top: 5px solid #ddd;
+  }
+
+  .reviews-section h2 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+  .review-item {
+    margin-bottom: 24px;
+    padding-bottom: 16px;
+    border-bottom: 5px solid #eee;
+  }
+  .review-author {
+    font-weight: bold;
+    margin-bottom: 2px;
+  }
+  .review-date {
+    color: #717171;
+    margin-bottom: 8px;
+    font-size: 14px;
+  }
+  .post-review-button {
+    background-color: #FF385C;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    padding: 10px 16px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin-top: 16px;
+  }
+
+
+  /*update*/
+  input[type="text"],
+  input[type="number"],
+  textarea {
+    background-color: #e6f2ff; 
+    border: 1px solid #999;
+    padding: 11px;
+    width: 100%;
+    margin-bottom: 8px;
+  }
+
+  .update-spot-container {
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  .update-spot-container h1 {
+    text-align: center;
+    color: #ff385c;
+    margin-bottom: 20px;
+  }
+  .update-spot-container h2 {
+    margin-top: 15px;
+    margin-bottom: 10px;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  label {
+    display: block;
+    margin-bottom: 9px;
+    font-weight: bold;
+  }
+  .error {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+  }
