--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,49 +1,63 @@
 h1 {
     text-align: center;
-    color: #ff385c;
-    margin: 10px;
+    color: #ec4242;
+    margin: 10px 0;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    font-weight: bolder;
   }
-
+  
   form {
-    display: block;
+    width: 90%;
+    max-width: 300px;
     margin: 0 auto;
-    width: 380px; 
-    padding: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    border-radius: 5px;
   }
-
   label {
     display: block;
     margin-bottom: 5px;
+    font-weight: 500;
+    color: #333;
+    font-size: 16px;
   }
-
+  
   input {
+    display: block;
     width: 100%;
+    box-sizing: border-box;
     padding: 8px;
-    border: 1px solid grey;
-    border-radius: 5px;
     margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 14px;
+    background-color: #f9f9f9;
   }
 
+  
   button {
     width: 100%;
     padding: 10px;
     background-color: #ff385c;
-    color: white;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
+    font-weight: bold; 
   }
-
+  
   button:hover {
     background-color: #ff5a76;
   }
-
+  
   .error-message {
     color: red;
     margin-top: 10px;
     font-size: 12px;
     text-align: center;
+    font-weight: bold; 
   }
-  
-  
