--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -2,6 +2,7 @@ h1 {
     font-size: 25px;
     margin-bottom: 20px;
     text-align: center;
+    color: #ff385c;
   }
 
   form {
@@ -32,30 +33,51 @@ h1 {
         margin-bottom: 5px;
       }
 
-  input {
-    width: 342px;
-    height: 24px;
-    padding: 5px;
-    margin-bottom: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
+      input {
+        display: block;
+        width: 200px;
+        height: 24px;
+        padding: 5px;
+        margin-bottom: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
 
-  button {
-    background-color: #ff385c;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 35%;
-    display: block;
-    margin: 15px auto 0;
-  }
+      input[type="text"] {
+        background-color: #f9f9f9;
+      }
+      
+      input[type="password"] {
+        background-color: #f9f9f9;
+      }
+
+      button {
+        background-color: #ff385c;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 15px;
+        font-size: 16px;
+        cursor: pointer;
+       
+      }
+      .signup-button {
+        margin-top: 10px;
+        width: 100px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
   button:hover {
     background-color: #ff5a76;
+  }
+
+  p {
+    color: red;
+    font-size: 12px;
+    margin-top: -8px;
+    margin-bottom: 10px;
   }
 
  
