--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -329,7 +329,7 @@
     margin-bottom: 2px;
   }
   .review-date {
-    color: #717171;
+    color: #000000;
     margin-bottom: 8px;
     font-size: 14px;
   }
@@ -385,3 +385,15 @@
     font-size: 14px;
     margin-top: 5px;
   }
+  .spot-header h1, 
+.spot-detail h1 {
+  color: #000000; 
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif ;
+}
+
+.spot-header p,
+.spot-location {
+  color: #000000;
+  font-weight: bold;
+}
