--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -22,7 +22,7 @@
     width: 31%;
     margin: 1%;
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: black;
   }
   .spot-card {
     border-radius: 10px;
@@ -57,7 +57,6 @@
     width: 100%;
     margin: 0 auto;
     padding: 20px;
-    box-sizing: border-box;
   }
 
 .spot-content {
@@ -71,9 +70,12 @@
     flex: 1;
   }
 
-.spot-detail h1 {
+  .spot-detail h1 {
     margin-bottom: 15px;
-}
+    color: #000000; 
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
 .spot-header {
     margin-bottom: 20px;
@@ -297,7 +299,8 @@
   }
   .manage-spots-container .spot-buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10px;
     margin-top: 10px;
   }
   
@@ -345,7 +348,6 @@
   }
 
 
-  /*update*/
   input[type="text"],
   input[type="number"],
   textarea {
@@ -396,4 +398,20 @@
 .spot-location {
   color: #000000;
   font-weight: bold;
+}
+
+.spot-card .update-button,
+.spot-card .delete-button,
+.spot-card button {
+  display: block;
+  margin: 5px auto;
+  width: 50%;
+  text-align: center;
+}
+.manage-spots-container .create-new-spot-button {
+    display: block;
+    text-align: center;
+    margin: 0 auto 20px auto;
+    width: fit-content;
+    padding: 10px 20px;
 }
