--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -16,6 +16,7 @@
     margin: 0 auto;
     padding: 20px;
     max-width: 1000px;
+    box-shadow: #000000;
   }
 
   .spot-card-link {
@@ -27,6 +28,8 @@
   .spot-card {
     border-radius: 10px;
     overflow: hidden;
+    box-shadow: #000000;
+    border: 2px solid #070000;
   }
 
   .spot-image-container {
