--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -26,6 +26,7 @@ button {
   width: fit-content;
   color: white;
   padding: 10px;
+   white-space: nowrap;
 }
 
 button:hover {
@@ -50,6 +51,7 @@ button:hover {
   display: flex;
   align-items: center;
   gap: 15px;
+  min-width: 200px;
 }
 
 .create-spot-link {
@@ -60,6 +62,7 @@ button:hover {
   border: 2px solid #ddd;
   background-color: #ff385c;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .create-spot-link:hover {
