--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -7,40 +7,41 @@
 
 /* SPOTS INDEX */
 .spots-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    padding: 20px;
-    max-width: 1000px;
+    display: flex !important;
+    flex-wrap: wrap !important;
+    margin: 0 auto !important;
+    padding: 20px !important;
+    max-width: 1000px !important;
+    box-shadow: #000;
 }
 
 /* SPOT CARDS */
 .spot-card-link {
-    width: 31%;
-    margin: 1%;
-    text-decoration: none;
-    color: black;
+    width: 31% !important;
+    margin: 1% !important;
+    text-decoration: none !important;
+    color: black !important;
 }
 
 .spot-card {
-    border-radius: 10px;
-    overflow: hidden;
-    border: 1px solid black;
+    border-radius: 10px !important;
+    overflow: hidden !important;
+    border: 1px solid black !important;
 }
 
 .spot-card:hover {
-    transform: translateY(-8px);
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+    transform: translateY(-8px) !important;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2) !important;
 }
 
 .spot-image-container {
-    height: 220px;
+    height: 220px !important;
 }
 
 .spot-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important;
 }
 
 .spot-info {
@@ -371,23 +372,26 @@ textarea {
 }
 
 .manage-spots-container .spots-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 100px;
-    padding: 20px;
+    display: flex !important;
+    flex-wrap: wrap !important;
+    margin: 0 auto !important;
+    padding: 20px !important;
+    max-width: 1000px !important;
 }
 
 .manage-spots-container .spot-card {
+   width: 31% !important;  
+    margin: 1% !important;
     border-radius: 10px;
     overflow: hidden;
     background-color: white;
     height: 100%;
     cursor: pointer;
+    border: 1px solid black !important;
 }
 
 .manage-spots-container .spot-image-container {
-    height: 200px;
+   height: 220px !important; 
     width: 100%;
     overflow: hidden;
 }
@@ -399,7 +403,8 @@ textarea {
 }
 
 .manage-spots-container .spot-info {
-    padding: 15px;
+    padding: 10px;
+    background-color: white;
 }
 
 .manage-spots-container .spot-rating {
