--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -97,7 +97,7 @@
 }
 
 /* Spot Images */
-.spot-images {
+.spot-detail .spot-images {
     display: grid;
     grid-template-columns: 50% 25% 25%;
     grid-template-rows: 205px 205px;
@@ -106,13 +106,13 @@
     margin-bottom: 24px;
 }
 
-.main-image-container {
+.spot-detail .main-image-container {
     grid-row: 1 / 3;
     grid-column: 1; 
     height: 100%;
 }
 
-.additional-images-container {
+ .spot-detail .additional-images-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -140,7 +140,7 @@
 }
 
 /* Spot Content */
-.spot-content {
+.spot-detail .spot-content {
     display: flex;
     justify-content: space-between;
     gap: 80px;
@@ -168,7 +168,7 @@
 }
 
 /* Reservation Card */
-.reservation-card {
+.spot-detail .reservation-card {
     flex: 1;
     max-width: 360px;
     border: 1px solid #dddddd;
@@ -470,3 +470,5 @@ textarea {
         margin-bottom: 20px;
     }
 }
+
+/*todo... fix the overridding features for production... tired of !important so find a more efficient way*/
