--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,63 +1,55 @@
 h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
     text-align: center;
-    color: #ec4242;
-    margin: 10px 0;
-    font-family: Arial, sans-serif;
-    font-size: 18px;
-    font-weight: normal;
-    font-weight: bolder;
-  }
+    color: #000000;
+    font-weight: bold;
+}
   
   form {
-    width: 90%;
-    max-width: 300px;
+    width: 350px;
     margin: 0 auto;
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-  }
-  label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: 500;
-    color: #333;
-    font-size: 16px;
-  }
+    padding: 20px;
+    background-color: white;
+}
   
   input {
     display: block;
     width: 100%;
-    box-sizing: border-box;
+    height: 30px;
     padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
+    margin-bottom: 15px;
+    border: 2px solid #ccc;
     border-radius: 3px;
-    font-size: 14px;
+    font-size: 12px;
     background-color: #f9f9f9;
   }
-
+input:focus {
+    border-color: #ff385c;
+    outline: none;
+}
   
   button {
-    width: 100%;
-    padding: 10px;
     background-color: #ff385c;
-    color: rgb(255, 255, 255);
+    color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 2px;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: bold;
     cursor: pointer;
+    width: 100%;
     margin-top: 10px;
-    font-weight: bold; 
-  }
+}
   
   button:hover {
     background-color: #ff5a76;
   }
   
-  .error-message {
+ .error-message {
     color: red;
-    margin-top: 10px;
-    font-size: 12px;
+    font-size: 14px;
+    margin-top: -10px;
+    margin-bottom: 10px;
     text-align: center;
-    font-weight: bold; 
-  }
+}
