--- a/frontend/src/components/Reviews/review.css
+++ b/frontend/src/components/Reviews/review.css
@@ -1,17 +1,41 @@
 .review-form{
-    max-width: 400px;
-    padding: 20px;
+    max-width: 350px;
+    padding: 14px;
+    text-align: center;
+}
+.review-form h1 {
+    color: #ff385c;
+    margin-bottom: 3px;
+}
+
+.review-form textarea {
+    width: 100%;
+    height: 80px;
+    padding: 12px;
+    border: 2px solid black;
+  
+}
+
+.review-form button {
+    background-color: #ff385c;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .stars-container {
     display: flex;
     align-items: center;
-    margin: 10px 0;
+    margin: 10px;
+    justify-content: center;
+    
+   
 }
 .star {
     font-size: 40px;
     cursor: pointer;
-    margin-right: 18px;
+    margin-right: 19px;
 
 }
 .star.empty {
@@ -21,44 +45,26 @@
     color: #ff385c;
 }
 
-REVIEWS SECTION */
 .reviews-section {
-    margin-top: 40px;
-    padding-top: 24px;
-    border-top: 1px solid #ddd;
+    border-top: 2px solid #000000;
 }
 
 .reviews-section h2 {
-    margin-bottom: 32px;
-    font-size: 20px;
+    margin-bottom: 10px;
+    font-size: 22px;
     font-weight: bold;
-     display: flex;
-      align-items: center;
-       gap: 8px;
 }
-
 .review-item {
-    margin-bottom: 40px;
-    padding-bottom: 24px;
-    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+    padding-bottom: 15px;
 }
-
 .review-item h3 {
     font-weight: bold;
-    font-size: 19px;
-    margin-bottom: 4px;
-    color-scheme: #FF385C;
+    margin-bottom: 5px;
 }
 
-
-.reviews-list {
-    margin-top: 20px;
-}
-
-.reviews-list p {
-    margin-bottom: 23px;
-    font-size: 14px;
-    color: rgb(0, 0, 0);
+.review-item p {
+    margin-bottom: 5px;
 }
 
 
@@ -71,15 +77,15 @@ REVIEWS SECTION */
 .review-date {
     color: black;
     margin-bottom: 8px;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .post-review-button {
     background-color: #FF385C;
-    color: white;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     padding: 12px 25px;
-    border-radius: 8px;
+    border-radius: 2px;
     border: none;
     cursor: pointer;
     margin-top: 16px; 
@@ -90,3 +96,45 @@ REVIEWS SECTION */
     background-color: #e31c5f;
 }
 
+
+/*TIS DELETIONS*/
+.delete-review-modal {
+   padding: 20px;
+   text-align: center;
+   background-color: white;
+   max-width: 370px;
+}
+
+.delete-review-modal h2 {
+   color: red;
+   margin-bottom: 10px;
+}
+
+.delete-review-modal p {
+   margin-bottom: 1px;
+}
+.button-container {
+   display: flex;
+   gap: 13px;
+   justify-content: center;
+}
+.delete-button {
+   background-color: red;
+   color: white;
+   border: none;
+   padding: 5px;
+   cursor: pointer;
+}
+
+.cancel-button {
+   background-color: gray;
+   color: white;
+   border: none;
+   padding: 10px;
+   cursor: pointer;
+}
+
+.error {
+   color: red;
+   font-size: 12px;
+}
