--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -3,13 +3,14 @@ h1 {
     margin-bottom: 20px;
     text-align: center;
     color: #ff385c;
+    font-weight: bold;
   }
 
   form {
-    width: 380px;
-    max-width: 400px;
+    width: 350px;
     margin: 0 auto;
     padding: 20px;
+     background-color: white;
   }  
   form-container {
     width: 100%;
@@ -25,23 +26,25 @@ h1 {
     align-items: center;
     margin-bottom: 6px;
   }
-    label {
-        width: 120px; 
+    
+  label {
+        display: block;
         font-size: 14px;
-        padding-right: 10px;
+        font-weight: bold;
         display: block;
         margin-bottom: 5px;
       }
 
       input {
         display: block;
-        width: 200px;
-        height: 24px;
+        width: 100%;
+        height: 30px;
         padding: 5px;
         margin-bottom: 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
+        border: 2px solid #ccc;
+        border-radius: 2px;
         box-sizing: border-box;
+        background-color: #f9f9f9;
       }
 
       input[type="text"] {
@@ -62,13 +65,18 @@ h1 {
         cursor: pointer;
        
       }
-      .signup-button {
-        margin-top: 10px;
-        width: 100px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
+     button {
+    background-color: #ff385c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 10px;
+}
   button:hover {
     background-color: #ff5a76;
   }
